fix alignment on right menu while logged in

--- a/public/skin-paciak-darkly.css
+++ b/public/skin-paciak-darkly.css
@@ -7192,3 +7192,9 @@ a.list-group-item-danger.active:focus {
 .emoji-tabs .emoji-dialog-search-container button.close:hover {
   background-color: #2c2c2c;
 }
+#search-form #search-button {
+  margin-top: 4px !important;
+}
+.header #user_dropdown {
+  padding-top: 16px !important;
+}
